--- a/Codebook.Rmd
+++ b/Codebook.Rmd
@@ -159,14 +159,14 @@ In the former part, variables activity and subject and names of the activities
 have been labelled using descriptive names.In this part, Names of Feteatures will 
 labelled using descriptive variable names.
 
-<li>
-prefix t is replaced by time 
-Acc is replaced by Accelerometer 
-Gyro is replaced by Gyroscope 
-prefix f is replaced by frequency 
-Mag is replaced by Magnitude 
-BodyBody is replaced by Body
-</li>
+<ul>
+<li>  prefix t is replaced by time</li> 
+<li>  Acc is replaced by Accelerometer </li>
+<li>  Gyro is replaced by Gyroscope </li>
+<li>  prefix f is replaced by frequency </li> 
+<li>  Mag is replaced by Magnitude </li>
+<li>  BodyBody is replaced by Body </li>
+</ul>
 
 ```{r}
 names(MasterData)<-gsub("^t", "time", names(MasterData))
